FIX: width added of video post on mobile

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -334,6 +334,7 @@
           background-color: $white;
           position: relative;
           z-index: 0;
+          max-width: 100vw;
         }
       }
     }
